--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "db:push": "drizzle-kit push",
     "db:clear": "tsx db/scripts/clear.ts",
     "db:seed": "tsx db/scripts/seed.ts",
+    "db:create-admin": "tsx db/scripts/create-admin.ts",
     "discord:register": "tsx db/scripts/register-discord-commands.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "bcryptjs": "^3.0.3",
     "discord-interactions": "^4.4.0",
     "dotenv": "^17.3.1",
     "drizzle-kit": "^0.31.9",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
